--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,3 @@
-
-@font-face {
-  font-family: 'Outfit';
-  src: url('../assets/fonts/Outfit-Regular.ttf');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-
 @import "tailwindcss";
 
 @theme {
@@ -20,13 +11,13 @@
 }
 
 body {
-  font-family: var(--font-family);
+  font-family: var(--font-outfit), sans-serif;
   background-color: var(--color-light);
   color: var(--color-dark);
 }
 
 .section-title {
-  @apply text-[25pt] font-semibold text-center md:text-[30pt]
+  @apply text-[25pt] font-semibold text-center md:text-[30pt] 
 }
 
 .section-subtitle {
